--- a/src/main/resources/static/greeting.html
+++ b/src/main/resources/static/greeting.html
@@ -12,15 +12,15 @@
         <div class="nav-wrapper blue">
             <a href="/" class="brand-logo" style="padding-left: 10px;">SpringSport</a>
             <ul class="right">
-                <li><a href="users">Users</a></li>
-                <li><a href="logout">Logout</a></li>
+                <li><a href="/users">Users</a></li>
+                <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
     </nav>
 
     <!-- Main Content -->
     <div class="container" style="margin-top: 50px;">
-        <h4 class="section">${message}</h4>
+        <h4 class="section">Welcome to SpringSport!</h4>
     </div>
 </body>
 </html>
