--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,13 +20,32 @@
         </div>
     </nav>
 
+    <!-- Section Login -->
+    <div id="login-section" class="container" style="margin-top:50px;">
+        <h4>Login</h4>
+        <form id="login-form" class="col s12">
+            <div class="row">
+                <div class="input-field col s6">
+                    <input type="text" id="username" required>
+                    <label for="username">Username</label>
+                </div>
+                <div class="input-field col s6">
+                    <input type="password" id="password" required>
+                    <label for="password">Password</label>
+                </div>
+            </div>
+            <button type="submit" class="btn waves-effect waves-light">Login</button>
+        </form>
+        <div id="login-message" class="section"></div>
+    </div>
+
     <!-- Section Home -->
-    <div id="home-section" class="container" style="margin-top:50px;">
+    <div id="home-section" class="container" style="margin-top:50px; display:none;">
         <h4>Welcome to SpringSport SPA!</h4>
     </div>
 
     <!-- Section Users -->
-    <div id="users-section" class="container" style="margin-top:50px;">
+    <div id="users-section" class="container" style="margin-top:50px; display:none;">
         <h4 id="section-form" class="section">New User</h4>
         <form id="user-form" class="col s12">
             <input type="hidden" id="user_id"/>
