edit btn users label

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -59,8 +59,8 @@
                     <label for="user_surname">Surname</label>
                 </div>
             </div>
-            <button type="submit" class="btn waves-effect waves-light">Create</button>
-            <button type="button" id="cancel-edit" class="btn grey lighten-1 waves-effect waves-light">Cancel</button>
+            <button type="submit" id="save-btn" class="btn waves-effect waves-light">Create</button>
+            <button type="button" id="cancel-btn" class="btn grey lighten-1 waves-effect waves-light">Cancel</button>
         </form>
         <div id="message" class="section"></div>
 
